# crewai-content-generator

./: .gitignore  gemini.md  run_server.py
.claude/: settings.local.json
architecture/: content_generation_sop.md  localization_sop.md  search_extraction_sop.md
backend/: api.py  job_manager.py  models.py
content_generator/: .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  pre_v2_test_baseline.txt  pyproject.toml
content_generator/.claude/: settings.json
content_generator/.claude/agents/: html-auditor.md  researcher.md
content_generator/.claude/hooks/: guard_env.py
content_generator/.claude/rules/: crew-orchestration.md  tools-parsers.md  yaml-config.md
content_generator/.claude/skills/audit-output/: SKILL.md
content_generator/.claude/skills/audit-yaml/: SKILL.md
content_generator/.claude/skills/generate/: SKILL.md
content_generator/_v2_migration/: CLAUDE_CODE_SESSION_PLAN.md  CLAUDE_md_v2_patches.md  crew_v2_patches.py  holabot-en.html  tasks_v2.yaml
content_generator/docs/: DEPLOYMENT.md  STAGE_0_PATCHES.md  STAGE_3_PATCHES.md  cost_tracker.py  marker-protocol.md  pipeline-architecture.md  sites-config.md  test_cost_tracker.py
content_generator/src/content_generator/: SetupGuide.md  app.py  crew.py  expert3d_crew_model_1.pkl  gui.py  main.py  pipeline_runner.py  requirements.txt  training_data.pkl
content_generator/src/content_generator/config/: agents.yaml  pricing.yaml  tasks.yaml
content_generator/src/content_generator/tools/: cost_tracker.py  custom_tools.py  parsers.py
content_generator/tests/: conftest.py
content_generator/tests/integration/: test_pipeline_runner.py
content_generator/tests/unit/: test_cost_tracker.py  test_crew_schemas.py  test_custom_tools.py  test_parsers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ConfigPanel.tsx  LogTerminal.tsx  PipelineStatus.tsx  PreviewPanel.tsx
frontend/src/types/: index.ts
