[project]
name = "content_generator"
version = "0.1.0"
description = "content-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "crewai[google-genai,tools]==1.9.3", # Залишив вашу фіксовану версію, бо crewAI чутливий до оновлень
    "crewai-tools>=0.38.1",              # Додано з requirements
    "firecrawl-py>=4.18.0",
    "gradio>=5.0.0",                     # Оновлено до версії 5.x
    "pypdf2>=3.0.1",
    "selenium>=4.28.0",                  # Оновлено мінімальну версію
    "webdriver-manager>=4.0.2",
    "python-dotenv>=1.1.0",              # Оновлено мінімальну версію
    "PyYAML>=6.0.2",                     # Оновлено мінімальну версію
    "requests>=2.32.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.11.0",                  # Додано з requirements
]

[project.scripts]
content_generator = "content_generator.main:run"
run_crew = "content_generator.main:run"
train = "content_generator.main:train"
replay = "content_generator.main:replay"
test = "content_generator.main:test"
run_with_trigger = "content_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
